CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

ENABLE_LANGUAGE(CXX)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

PROJECT(h2olog)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra -g3 ${CMAKE_CXX_FLAGS}")

FIND_PATH(LIBBCC_INCLUDE_DIR bcc/compat)
FIND_LIBRARY(LIBBCC_LIB "bcc")
IF (LIBBCC_LIB)
  IF (LIBBCC_INCLUDE_DIR)
    INCLUDE_DIRECTORIES("${LIBBCC_INCLUDE_DIR}/bcc/compat")
    SET(LIBBCC_LIBRARIES "-lbcc")
  ELSE (LIBBCC_INCLUDE_DIR)
    MESSAGE(SEND_ERROR "libbcc header files not found")
  ENDIF (LIBBCC_INCLUDE_DIR)
ELSE (LIBBCC_LIB)
  MESSAGE(SEND_ERROR "libbcc not found")
ENDIF (LIBBCC_LIB)

SET(SOURCE_FILES h2olog.cc http.cc quic.cc)

set(SOURCE_FILES
  "h2olog.cc"
  "http.cc"
  "json.h"
  "json.cc"
)

ADD_CUSTOM_COMMAND(
    OUTPUT  "${CMAKE_BINARY_DIR}/quicly-probes.d"
    COMMAND curl -sL 'https://raw.githubusercontent.com/h2o/quicly/master/quicly-probes.d' >${CMAKE_BINARY_DIR}/quicly-probes.d
)
LIST(APPEND DTRACE_FILES "${CMAKE_BINARY_DIR}/quicly-probes.d")

ADD_CUSTOM_COMMAND(
    OUTPUT  "${CMAKE_BINARY_DIR}/h2o-probes.d"
    COMMAND curl -sLO 'https://raw.githubusercontent.com/h2o/h2o/master/h2o-probes.d' >${CMAKE_BINARY_DIR}/h2o-probes.d
)
LIST(APPEND DTRACE_FILES "${CMAKE_BINARY_DIR}/h2o-probes.d")

SET(H2O_BINARY "${CMAKE_SOURCE_DIR}/../../h2o/h2o/build/h2o") # FIXME
ADD_CUSTOM_COMMAND(
    OUTPUT  "${CMAKE_BINARY_DIR}/quic.cc"
    COMMAND "${CMAKE_SOURCE_DIR}/gen-bpf.py" "${H2O_BINARY}" "${CMAKE_BINARY_DIR}" "${CMAKE_BINARY_DIR}/quic.cc"
    DEPENDS ${DTRACE_FILES}
    DEPENDS "${CMAKE_SOURCE_DIR}/gen-bpf.py"
)
LIST(APPEND SOURCE_FILES "${CMAKE_BINARY_DIR}/quic.cc")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(h2olog ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(h2olog ${LIBBCC_LIBRARIES})
